--- a/InterpretBank/InterpretBank/Controls/ChooseFilepathControl.xaml
+++ b/InterpretBank/InterpretBank/Controls/ChooseFilepathControl.xaml
@@ -39,6 +39,7 @@
                 <ComboBox Height="25"
                           IsEditable="True"
                           x:Name="FilepathCombobox"
+                          AutomationProperties.Name="Recently used"
                           BorderThickness="0"
                           VerticalContentAlignment="Center"
                           Foreground="DimGray"
