--- a/InterpretBank/InterpretBank/Styles/SettingsResources.xaml
+++ b/InterpretBank/InterpretBank/Styles/SettingsResources.xaml
@@ -44,23 +44,15 @@
     </Style>
     <DataTemplate x:Key="TagTemplate"
                   DataType="{x:Type model:TagModel}">
-        <DockPanel>
-            <Image Source="../../Resources/Tag.png"
-                   DockPanel.Dock="Left"
-                   Height="17" />
-            <TextBlock Text="{Binding TagName}"
-                       FontSize="10"
-                       VerticalAlignment="Center"
-                       DockPanel.Dock="Right" />
-        </DockPanel>
+
+        <TextBlock Text="{Binding TagName}"
+                   FontSize="10"
+                   VerticalAlignment="Center" />
     </DataTemplate>
 
     <DataTemplate x:Key="GlossaryTemplate"
                   DataType="{x:Type model:GlossaryModel}">
-        <DockPanel>
-            <Image Source="../../Resources/Glossary.png"
-                   DockPanel.Dock="Left"
-                   Height="17" />
+         
             <TextBlock FontSize="10"
                        VerticalAlignment="Center"
                        DockPanel.Dock="Right">
@@ -71,7 +63,6 @@
                     </MultiBinding>
                 </TextBlock.Text>
             </TextBlock>
-        </DockPanel>
     </DataTemplate>
 
     <DataTemplate x:Key="LanguageTemplate"
